makes the card element

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <h1>match the cards</h1>
-<div id="game-board" class="game-board"></div>
+
+    <div class="location">
+        <div id="game-board" class="game-board">
+            <div class="box"></div>
+        </div>
+    </div>
+
 <script src="script.js"></script>
 </body>
 </html>
+
