added a win screen/ divert from illuminus

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+<div class = winLocation id="winLocation">
+     <div class = winScreen id="winScreen">
+        <div class = winText> You Win!</div>
+    </div>
+    <div class =restartButton id="restartButton">
+        <img class = restartIcon src="./reload.png" id="restartIcon">
+    </div>
+</div>
+   
     <div class="location">
         <div id="game-board" class="game-board">
         </div>
