--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
      <div class = winScreen id="winScreen">
         <div class = winText> You Win!</div>
     </div>
-    <div class =restartButton id="restartButton">
         <img class = restartIcon src="./reload.png" id="restartIcon">
-    </div>
 </div>
    
     <div class="location">
@@ -22,6 +20,8 @@
         </div>
     </div>
 
+
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
